--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,8 @@
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.4"
   }
 }
