--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "tailwind-merge": "^2.1.0"
     },
     "devDependencies": {
+        "@radix-ui/react-dialog": "^1.1.15",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.2.1",
@@ -33,6 +34,7 @@
         "eslint-plugin-react-refresh": "^0.4.5",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.3.6",
+        "tailwindcss-animate": "^1.0.7",
         "vite": "^5.0.8"
     }
 }
